Mon Dec 15 21:01:46 2008  Tanaka Akira  <akr@fsij.org>

	* ext/pty/pty.c (chfunc): make it static.

Mon Dec 15 20:16:46 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* common.mk (EXTMK_ARGS): shouldn't use ``\"'' because cmd.exe eat
	  ''\'' in such quotes.

Mon Dec 15 19:07:31 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (config.h): define CANONICALIZATION_FOR_MATHN
	  to follow r20683.

Mon Dec 15 18:12:34 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/rake/packagetask.rb (Rake::PackageTask): small document
	  update from okkez in [ruby-dev:37443]

Mon Dec 15 16:26:46 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_callee_setup_arg_complex): uses cfp from
	  blockptr instead of the current cfp.  [ruby-core:20544]

Wed Dec 17 09:50:19 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/ruby/test_metaclass.rb: removed codes for my debugging.
	  sorry. [ruby-dev:37470]

Mon Dec 15 14:56:59 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/ruby/test_metaclass.rb: new test case for metaclass hierarchy.

	* class.c (make_metametaclass): new function. extracted from
	  rb_make_metaclass.

	* class.c (rb_make_metaclass): uses make_metametaclass when called for a
	  metaclass.

	* class.c (rb_singleton_class): creates a meta^(n+2)-class in
	  addition to a meta^(n+1)-class when called for a meta^(n)-class.
	  This is because the returned meta^(n+1) class must acts as an instance of 
	  Class, metaclass of Class, ..., meta^(n+1)-class of Class,
	  Module, metaclass of Module, ..., meta^(n+1)-class of Module,
	  Object, metaclass of Object, ..., meta^(n+2)-class of Object,
	  BasicObject, metaclass of BasicObject, ..., meta^(n+2)-class of
	  and BasicObject even when Class, Module, Object or BasicObject has
	  not have its meta^(i)-class yet. 

Mon Dec 15 15:13:22 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* id.h, template/id.h.tmpl (ruby_method_ids): sees YYTOKENTYPE too.
	  [ruby-dev:37436]
