@@ -1,3 +1,9 @@
+Mon Dec 15 23:29:49 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* ruby.c (process_options): revive global sub, gsub, chop, chomp
+	  only when auto looping options (-p/-n) is specified.
+	  [ruby-core:20570]
+
 Mon Dec 15 21:01:46 2008  Tanaka Akira  <akr@fsij.org>
 
 	* ext/pty/pty.c (chfunc): make it static.
